--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a href="#services">Services</a>
             <a href="#portfolio">Project</a>
             <a href="#contact">Contact</a>
+            <a href="https://shopendr.kesug.com">My store</a>
         </nav>
 
         <div class="bx bx-moon" id="darkMode-icon"></div>
@@ -215,24 +216,18 @@
             <div class="testimonial-box mySwiper">
                 <div class="testimonial-content swiper-wrapper">
                     <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial1.jpg" alt="">
-                        <h3>Jackson Levi</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
+                        <img src="images/regina.jpg" alt="testimonial">
+                        <h3>Regina</h3>
+                        <p>Proyek saya berhasil berkat kerjasama yang erat dengan Adi. Mereka tidak hanya menyediakan solusi yang inovatif, tetapi juga selalu siap memberikan dukungan yang diperlukan. Kami sangat puas dengan hasilnya</p>
+                        <br>
+                        <a href="https://instagram.com/rregiina__" class="btn">witness contact</a>
                     </div>
                     <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial2.jpg" alt="">
-                        <h3>Flora Ocean</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
+                        <img src="images/aca.jpeg" alt="testimonial">
+                        <h3>Nurasyikin</h3>
+                        <p>Saya ingin menyatakan apresiasi saya yang sebesar-besarnya kepada Adi untuk layanan yang luar biasa. Dari awal hingga akhir, mereka terlibat secara aktif dan membantu kami mencapai hasil yang luar biasa.</p>
+                        <br>
+                        <a href="" class="btn">witness contact</a>
                     </div>
                     <div class="testimonial-slide swiper-slide">
                         <img src="images/testimonial3.jpg" alt="">
