--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
             <h3>Hello, I am</h3>
             <h1>Adi Supiansyah</h1>
             <p>
-                I'm a web developer who loves to create beautiful and functional websites
-                for people who want to make a difference in the world.
+                Saya seorang pengembang web yang berdedikasi untuk menciptakan situs web yang tidak hanya indah tetapi juga berfungsi dengan baik. Selain itu saya sangat menekuni suatu pekerjaan yang telah di berikan, Saya fokus membantu individu dan kelompok yang ingin memberikan dampak positif di dunia.
             </p>
-            <p>Currently I'm a student of The Jump Digital School, where I'm learning how to
-            create beautiful and functional websites using HTML, CSS, JavaScript, and WordPress.</p>
+            <br>
+            <p>Saat ini saya adalah seorang Freelance yang bekerja sampingan sambil belajar untuk mengasah skil saya sebagai Web Developer</p>
 
             <div class="social-media">
                 <a href="https://www.facebook.com/adi.supiansyah.56/?locale=id_ID"><i class='bx bxl-facebook'></i></a>
@@ -98,25 +97,15 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>
-                Hi there, welcome to my website! I'm Adi supiansyah,
-                a passionate web developer who enjoys learning new technologies
-                and solving problems with code!
+                Halo, Selamat datang di situs web saya !
             </h3>
             <p>
-                This website is my personal blog where I write about web development
-                topics that interest me and inspire me.
+                Saya Adi supiansyah seorang pengembang web dengan semangat tinggi untuk menciptakan pengalaman online yang luar biasa. Saya percaya bahwa setiap garis kode memiliki kekuatan untuk membentuk dunia digital dan itu lah yang memotivasi saya setiap hari.
             </p>
             <p>
-                Thank you for visiting my website and getting to know me better. I hope you
-                enjoyed reading my blog posts and
-                found
-                them useful and informative. If you want to read more of my posts, subscribe
-                to my newsletter where I send
-                weekly
-                updates on web development trends and tips. If you have any feedback or
-                suggestions, please let me know. I'd love to hear from you.
+                Kemampuan saya tidak hanya mencakup pada pengembang web, saya 
             </p>
-            <a href="#" class="btn">Read More</a>
+            <a href="https://www.instagram.com/adi.spiansyh/" class="btn">Contact me !</a>
         </div>
     </section>
 
@@ -216,28 +205,25 @@
             <div class="testimonial-box mySwiper">
                 <div class="testimonial-content swiper-wrapper">
                     <div class="testimonial-slide swiper-slide">
+                        <img src="images/aca.jpeg" alt="testimonial">
+                        <h3>Nurasyikin</h3>
+                        <p>Proyek saya berhasil berkat kerjasama yang erat dengan Adi. Mereka tidak hanya menyediakan solusi yang inovatif, tetapi juga selalu siap memberikan dukungan yang diperlukan. Kami sangat puas dengan hasilnya</p>
+                        <br>
+                        <a href="https://instagram.com/accaaaaa_01?igshid=YTQwZjQ0NmI0OA%3D%3D&utm_source=qr" class="btn">witness contact</a>
+                    </div>
+                    <div class="testimonial-slide swiper-slide">
                         <img src="images/regina.jpg" alt="testimonial">
                         <h3>Regina</h3>
-                        <p>Proyek saya berhasil berkat kerjasama yang erat dengan Adi. Mereka tidak hanya menyediakan solusi yang inovatif, tetapi juga selalu siap memberikan dukungan yang diperlukan. Kami sangat puas dengan hasilnya</p>
+                        <p>Saya ingin menyatakan apresiasi saya yang sebesar-besarnya kepada Adi untuk layanan yang luar biasa. Dari awal hingga akhir, mereka terlibat secara aktif dan membantu kami mencapai hasil yang luar biasa.</p>
                         <br>
                         <a href="https://instagram.com/rregiina__" class="btn">witness contact</a>
                     </div>
                     <div class="testimonial-slide swiper-slide">
-                        <img src="images/aca.jpeg" alt="testimonial">
-                        <h3>Nurasyikin</h3>
-                        <p>Saya ingin menyatakan apresiasi saya yang sebesar-besarnya kepada Adi untuk layanan yang luar biasa. Dari awal hingga akhir, mereka terlibat secara aktif dan membantu kami mencapai hasil yang luar biasa.</p>
+                        <img src="images/nurulsafika.jpg" alt="testimonial">
+                        <h3>Nurul safika</h3>
+                        <p>Saya ingin menyatakan apresiasi saya yang sebesar-besarnya kepada Adi untuk layanan yang luar biasa. Dari awal hingga akhir, berkat kerja sama yang kuat proyek saya akhirnya selesai.</p>
                         <br>
-                        <a href="" class="btn">witness contact</a>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/testimonial3.jpg" alt="">
-                        <h3>Julian Grayson</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem dignissimos aliquid
-                            iure delectus corrupti impedit, beatae aperiam ad iusto nostrum possimus cum pariatur harum
-                            assumenda suscipit a, qui, tempora maxime nulla facere quo ipsum tempore. Atque libero
-                            provident ad aut officia pariatur voluptate quaerat delectus nesciunt, sequi eligendi
-                            aperiam fugit unde nihil, iste similique illum. Dignissimos enim officia consequuntur
-                            dolores.</p>
+                            <a href="https://www.instagram.com/nrulsfka?igshid=NGVhN2U2NjQ0Yg==" class="btn">witness contact</a>
                     </div>
                 </div>
 
