--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 Saya Adi supiansyah seorang pengembang web dengan semangat tinggi untuk menciptakan pengalaman online yang luar biasa. Saya percaya bahwa setiap garis kode memiliki kekuatan untuk membentuk dunia digital dan itu lah yang memotivasi saya setiap hari.
             </p>
             <p>
-                Kemampuan saya tidak hanya mencakup pada pengembang web, saya 
+                Kemampuan saya tidak hanya mencakup pada pengembangan web, tetapi juga mencakup pemahaman mendalam tentang Teknisi komputer, Desain, Administrasi kantor, dan Microsoft office. Dengan pengalaman dan keahlian saya, saya siap membantu/bekerja sama dengan anda.
             </p>
             <a href="https://www.instagram.com/adi.spiansyh/" class="btn">Contact me !</a>
         </div>
